--- a/HomelessShelter.ipynb
+++ b/HomelessShelter.ipynb
@@ -49,7 +49,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,7 +60,7 @@
         "colab": {}
       },
       "source": [
-        "#https://raw.githubusercontent.com/VernonNaidoo-Toronto/Understanding-Toronto-Shelters/master/Shelter%20Data/daily-shelter-occupancy-2017-csv.csv\n",
+        "# Import shelter data from Github:\n",
         "#df17=pd.read_csv('daily-shelter-occupancy-2017-csv.csv')\n",
         "#df18=pd.read_csv('daily-shelter-occupancy-2018-csv.csv')\n",
         "#df19=pd.read_csv('daily-shelter-occupancy-2019-csv.csv')\n",
@@ -68,7 +68,7 @@
         "df18=pd.read_csv('https://raw.githubusercontent.com/VernonNaidoo-Toronto/Understanding-Toronto-Shelters/master/Shelter%20Data/daily-shelter-occupancy-2018-csv.csv')\n",
         "df19=pd.read_csv('https://raw.githubusercontent.com/VernonNaidoo-Toronto/Understanding-Toronto-Shelters/master/Shelter%20Data/daily-shelter-occupancy-2019-csv.csv')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
         "df=pd.concat([df17,df18,df19])\n",
         "df"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +345,7 @@
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +388,7 @@
       "source": [
         "df['SHELTER_CITY'].unique()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -418,7 +418,7 @@
       "source": [
         "df['SECTOR'].unique()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -448,7 +448,7 @@
       "source": [
         "df['SHELTER_NAME'].unique().size"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +480,7 @@
         "df['Month_Year']=pd.to_datetime(df['OCCUPANCY_DATE']).dt.to_period('M')\n",
         "df.head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -647,7 +647,7 @@
         "plt.xlabel('Month')\n",
         "plt.ylabel('OCCUPANCY')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -695,7 +695,7 @@
         "plt.xlabel('Month')\n",
         "plt.ylabel('CAPACITY')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -739,7 +739,7 @@
         "df['delta']=df['OCCUPANCY']-df['CAPACITY']\n",
         "df.head()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -909,7 +909,7 @@
         "df_over = df[df['delta'] > 0]\n",
         "df_over.head()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,7 +1082,7 @@
         "plt.xlabel('Month')\n",
         "plt.ylabel('OVERCAPACITY')"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1121,7 +1121,7 @@
       "source": [
         ""
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1134,7 +1134,7 @@
       "source": [
         ""
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     }
   ]
