--- a/Mahshad_Starter.ipynb
+++ b/Mahshad_Starter.ipynb
@@ -1,1 +1,65 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"Mahshad_Starter.ipynb","provenance":[],"collapsed_sections":[],"authorship_tag":"ABX9TyPn8noNRme6c0OvLKHUX6b+"},"kernelspec":{"name":"python3","display_name":"Python 3"}},"cells":[{"cell_type":"markdown","metadata":{"id":"WqMNQKtNYWdi","colab_type":"text"},"source":["# Mahshad's Starter Notebook"]},{"cell_type":"code","metadata":{"id":"UCccBDUdYUMc","colab_type":"code","colab":{}},"source":["# Code cell"],"execution_count":null,"outputs":[]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "Mahshad_Starter.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMsnQIHUKn4cJnS7/NMbOPX",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/VernonNaidoo-Toronto/Understanding-Toronto-Shelters/blob/master/Mahshad_Starter.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WqMNQKtNYWdi",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Mahshad's Starter Notebook"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UCccBDUdYUMc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 32
+        },
+        "outputId": "6629817a-3f84-4c9c-ee49-5e411670b8a1"
+      },
+      "source": [
+        "# Code cell\n",
+        "print('Hello World!')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello World!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    }
+  ]
+}
