--- a/WA_CPI.ipynb
+++ b/WA_CPI.ipynb
@@ -41,7 +41,11 @@
       "metadata": {
         "id": "Rxso_gdXRBXp",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "fc67e056-9953-4b17-8564-d05145fd3a2d"
       },
       "source": [
         "import numpy as np\n",
@@ -63,8 +67,17 @@
         "warnings.filterwarnings('ignore')\n",
         "%config InlineBackend.figure_format = 'retina'\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -81,16 +94,19 @@
       "metadata": {
         "id": "nMsewdjpRBXu",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "5158f584-24c0-475b-f2ad-75eda077da57"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "7875615a-b378-4a12-cb24-e7dfb854fbc5"
       },
       "source": [
         "#df17=pd.read_csv('./HomelessShelter/daily-shelter-occupancy-2017-csv.csv')\n",
         "#df18=pd.read_csv('./HomelessShelter/daily-shelter-occupancy-2018-csv.csv')\n",
         "#df19=pd.read_csv('./HomelessShelter/daily-shelter-occupancy-2019-csv.csv')\n",
         "# Load files from GitHub; add year labels\n",
-        "#path = 'https://raw.githubusercontent.com/VernonNaidoo-Toronto/Understanding-Toronto-Shelters/master/Shelter%20Data/'\n",
-        "path = './HomelessShelter/'\n",
+        "path = 'https://raw.githubusercontent.com/VernonNaidoo-Toronto/Understanding-Toronto-Shelters/master/Shelter%20Data/'\n",
+        "\n",
         "dso2017 = pd.read_csv(path + 'daily-shelter-occupancy-2017-csv.csv', \n",
         "                    parse_dates=['OCCUPANCY_DATE']); dso2017['source_file']=2017\n",
         "dso2018 = pd.read_csv(path + 'daily-shelter-occupancy-2018-csv.csv',\n",
@@ -102,10 +118,10 @@
         "for year, df in [[2017,dso2017], [2018,dso2018], [2019,dso2019]]:\n",
         "  print(f'Loaded {len(df)} records from the {year} file.')\n",
         "\n",
-        "cpi_data = pd.read_csv('CPI_MONTHLY.csv', header=20, names=['date', 'CPI', 'CPI_adj', 'Static', 'CPI_TRIM', \n",
+        "cpi_data = pd.read_csv(path + 'CPI_MONTHLY.csv', header=20, names=['date', 'CPI', 'CPI_adj', 'Static', 'CPI_TRIM', \n",
         "                                                      'CPI_MEDIAN', 'CPI_COMMON', 'ATOM', 'CPIXFET', 'CPIW'])"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
