--- a/WA_CPI_V3.ipynb
+++ b/WA_CPI_V3.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.4"
     },
     "colab": {
-      "name": "WA_CPI_V3.ipynb",
+      "name": "Copy of WA_CPI_V3.ipynb",
       "provenance": [],
       "include_colab_link": true
     }
@@ -98,18 +98,18 @@
       "source": [
         "path1 = 'https://raw.githubusercontent.com/VernonNaidoo-Toronto/Understanding-Toronto-Shelters/master/Shelter%20Data/'\n",
         "\n",
-        "dso2017 = pd.read_csv(path + 'daily-shelter-occupancy-2017-csv.csv', \n",
+        "dso2017 = pd.read_csv(path1 + 'daily-shelter-occupancy-2017-csv.csv', \n",
         "                    parse_dates=['OCCUPANCY_DATE']); dso2017['source_file']=2017\n",
-        "dso2018 = pd.read_csv(path + 'daily-shelter-occupancy-2018-csv.csv',\n",
+        "dso2018 = pd.read_csv(path1 + 'daily-shelter-occupancy-2018-csv.csv',\n",
         "                    parse_dates=['OCCUPANCY_DATE']); dso2018['source_file']=2018\n",
-        "dso2019 = pd.read_csv(path + 'daily-shelter-occupancy-2019-csv.csv',\n",
+        "dso2019 = pd.read_csv(path1 + 'daily-shelter-occupancy-2019-csv.csv',\n",
         "                    parse_dates=['OCCUPANCY_DATE']); dso2019['source_file']=2019\n",
         "\n",
         "# Get summary of records loaded\n",
         "for year, df in [[2017,dso2017], [2018,dso2018], [2019,dso2019]]:\n",
         "  print(f'Loaded {len(df)} records from the {year} file.')\n",
         "\n",
-        "cpi_data = pd.read_csv('CPI_MONTHLY.csv', header=20, names=['date', 'CPI', 'CPI_adj', 'Static', 'CPI_TRIM', \n",
+        "cpi_data = pd.read_csv(path1 + 'CPI_MONTHLY.csv', header=20, names=['date', 'CPI', 'CPI_adj', 'Static', 'CPI_TRIM', \n",
         "                                                      'CPI_MEDIAN', 'CPI_COMMON', 'ATOM', 'CPIXFET', 'CPIW'])"
       ],
       "execution_count": null,
