fix path for reading data

--- a/MN_fix_postal_code_sep_years.ipynb
+++ b/MN_fix_postal_code_sep_years.ipynb
@@ -8,9 +8,10 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd \n",
-    "df17 = pd.read_csv(\"daily-shelter-occupancy-2017-csv.csv\")\n",
-    "df18 = pd.read_csv(\"daily-shelter-occupancy-2018-csv.csv\")\n",
-    "df19 = pd.read_csv(\"daily-shelter-occupancy-2019-csv.csv\")\n",
+    "path = 'https://raw.githubusercontent.com/VernonNaidoo-Toronto/Understanding-Toronto-Shelters/master/Shelter%20Data/'\n",
+    "df17 = pd.read_csv(path + \"daily-shelter-occupancy-2017-csv.csv\")\n",
+    "df18 = pd.read_csv(path + \"daily-shelter-occupancy-2018-csv.csv\")\n",
+    "df19 = pd.read_csv(path + \"daily-shelter-occupancy-2019-csv.csv\")\n",
     "#df = pd.concat([df17,df18,df19])"
    ]
   },
