--- a/MN_population_average_rant_occupancy_correlation.ipynb
+++ b/MN_population_average_rant_occupancy_correlation.ipynb
@@ -457,9 +457,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df17 = pd.read_csv(\"daily-shelter-occupancy-2017-fix-postalcode.csv\")\n",
-    "df18 = pd.read_csv(\"daily-shelter-occupancy-2018-fix-postalcode.csv\")\n",
-    "df19 = pd.read_csv(\"daily-shelter-occupancy-2019-fix-postalcode.csv\")"
+    "path = 'https://raw.githubusercontent.com/VernonNaidoo-Toronto/Understanding-Toronto-Shelters/master/Shelter_Data_fixed_postal_code/'\n",
+    "df17 = pd.read_csv(path + \"daily-shelter-occupancy-2017-fix-postalcode.csv\")\n",
+    "df18 = pd.read_csv(path + \"daily-shelter-occupancy-2018-fix-postalcode.csv\")\n",
+    "df19 = pd.read_csv(path + \"daily-shelter-occupancy-2019-fix-postalcode.csv\")"
    ]
   },
   {
@@ -1320,7 +1321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
