--- a/Crime Data/HomelessShelter-Crime_07-08-2020.ipynb
+++ b/Crime Data/HomelessShelter-Crime_07-08-2020.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Shelter Data Analysis\n",
     "\n",
-    "Objective\n",
+    "Objectives\n",
     "1. Investigate crime data to determine if there are any factors which seem to cause or are the result of increased shelter use\n",
     "2. Develop temporal linear model to predict potential changes to crime metrics\n",
     "3. Develop a predictive model using Bayesian infernce for crime proximity to shelters\n",
